[package]
name = "sprout"
version = "0.1.0"
authors = ["Frozen <phpconf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0.114", features = ["derive"] }
